--- a/.github/workflows/incloud.yaml
+++ b/.github/workflows/incloud.yaml
@@ -63,8 +63,8 @@ jobs:
           git add output/active_urls.txt
       - name: Commit results to Github
         run: |
-          git config --local user.email "admin@inbug.org"
-          git config --global user.name "inbug-team"
+          git config --local user.email "asdfkj1@test.com"
+          git config --global user.name "asdfkj1"
           git commit -m "InCloud Report" -a --allow-empty
       - name: Push changes
         uses: ad-m/github-push-action@master
